# TiraLib

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
athena/search_methods/: sequential_parallelization.py
athena/tiramisu/: __init__.py  compiling_service.py  function_server.py  schedule.py  tiramisu_program.py  tiramisu_tree.py
athena/tiramisu/tiramisu_actions/: distribution.py  expansion.py  fusion.py  interchange.py  parallelization.py  reversal.py  tiling_2d.py  tiling_3d.py  tiling_general.py  tiramisu_action.py  unrolling.py
examples/: blur_example.py  blur_tiralibcpp_example.py
tests/: utils.py
tests/search_methods/: test_sequential_parallelization.py
tests/tiramisu/: test_schedule.py  test_tiramisu_server.py  test_tiramisu_tree.py
tests/tiramisu/tiramisu_actions/: test_distribution.py  test_expansion.py  test_fusion.py  test_interchange.py  test_matrix.py  test_parallelization.py  test_reversal.py  test_skewing.py  test_tiling_2d.py  test_tiling_3d.py  test_tiling_general.py  test_tiramisu_action.py  test_unrolling.py
tiralib/: __init__.py  config.py
tiralib/config/: config.py
tiralib/search_methods/: sequential_parallelization.py
tiralib/tiramisu/: __init__.py  compiling_service.py  function_server.py  schedule.py  tiramisu_iterator_node.py  tiramisu_program.py  tiramisu_tree.py
tiralib/tiramisu/tiramisu_actions/: __init__.py  distribution.py  expansion.py  fusion.py  interchange.py  matrix.py  parallelization.py  reversal.py  skewing.py  (+5 more)
tiralib/utils/: config.py
