[tool.poetry]
name = "tiralib"
version = "0.1.0"
description = ""
authors = ["Smail KOURTA <sk10691@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["tiralib"]

[tool.coverage.report]
# omit main.py from coverage report
omit = ["tiralib/main.py"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"
testpaths = ["tests"]

# Linting tools configuration
# [tool.ruff]
# line-length = 99
# lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
# lint.extend-ignore = [
#     "D203",
#     "D204",
#     "D213",
#     "D215",
#     "D400",
#     "D404",
#     "D406",
#     "D407",
#     "D408",
#     "D409",
#     "D413",
# ]
# lint.ignore = ["E501", "D107"]
# lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
# extend-exclude = ["__pycache__", "*.egg_info"]

# [tool.ruff.lint.mccabe]
# max-complexity = 10

# [tool.codespell]
# skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

# [tool.pyright]
# include = ["src/**.py"]
